# simple-openai

./: .gitignore  404.html  README.md  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
docs/: index.md
docs/simple_openai/: async_simple_openai.md  chat_manager.md  function_manager.md  public_models.md  responses.md  simple_openai.md  tool_manager.md
models/: open_ai_models.py
search/: search_index.json
simple_openai/async_simple_openai/: index.html
simple_openai/chat_manager/: index.html
simple_openai/function_manager/: index.html
simple_openai/public_models/: index.html
simple_openai/responses/: index.html
simple_openai/simple_openai/: index.html
simple_openai/tool_manager/: index.html
src/simple_openai/: __init__.py  async_simple_openai.py  chat_manager.py  constants.py  function_manager.py  responses.py  simple_openai.py  tool_manager.py
src/simple_openai/models/: open_ai_models.py
tests/: test_AsyncSimpleOpenai.py  test_SimpleOpenai.py  test_open_ai_models_schema.py
