# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-openai"
version = "2.0.0"
description = "Simple OpenAI API wrapper"
readme = "README.md"
authors = [{ name = "Stephen Schleising", email = "stephen@schleising.net" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
keywords = ["openai", "api", "wrapper"]
dependencies = [
    "aiohttp",
    "requests",
    "pydantic"
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["mkdocs", "mkdocs-material", "mkdocstrings", "mkdocstrings-python" ]

[project.urls]
Homepage = "https://schleising.github.io/simple-openai/"
Issues = "https://github.com/schleising/simple-openai/issues"
Repo = "https://github.com/schleising/simple-openai"
